{
  "en": {
    "translation": {
      "manager.welcome": "Welcome to Regroup",
      "new.chore": "Pick your new chore:",
      "checkin.failed": "Failed to check in",
      "adding.meeting": "Adding meeting...",
      "meeting.checkingin": "Checking into meeting...",
      "add.chore": "Add Chore",
      "attend.meeting": "Attend Meeting",
      "remove.chore": "Remove Chore",
      "manager.welcome.subheader": "The premier solution for recovery homes",
      "meetings": "Meetings",
      "supporters": "Supporters",
      "logo.description": "Sober Living Recovery Accountability System",
      "current.chore": "Current Chore",
      "room.chore": "Room Chore",
      "house.chore": "House Chore",
      "met.sponsor": "Met Sponsor",
      "sponsor.modal.title": "Meet Sponsor",
      "work.modal.title": "Add Work Hours",
      "chore.modal.title": "Complete Chore",
      "change.chore.modal.title": "Change Chore",
      "step.question": "What step are you on?",
      "hours.worked": "Hours Worked",
      "work": "Work",
      "rent.owed": "Rent Owed",
      "weekly.chore": "Weekly Chore",
      "chore.fees": "Chore Fees",
      "houses.overview": "Houses Overview",
      "manage.house": "Manage House",
      "weekly.meeting": "Weekly Meeting",
      "create.guest": "Create Guest",
      "update.guest": "Update Guest",
      "guest.stats": "Guest Overview",
      "notifications": "Notifications",
      "logout": "Logout",
      "success": "Success!",
      "phase": "Phase",
      "curfew": "Curfew",
      "overnights": "Overnights",
      "years": "Years",
      "months": "Months",
      "days": "Days",
      "sobriety.date": "Sobriety Date",
      "bathroom": "Bathroom",
      "living.room": "Living Room",
      "kitchen": "Kitchen",
      "stairs": "Stairs",
      "pool.table": "Pool Table",
      "error.incorrect.password": "Incorrect Password",
      "error.generic": "Something went wrong. Please try again.",
      "error.too.many.requests": "Too many attempts. Please wait a moment and try again.",
      "error.no.future.date": "Must not be a future date.",
      "error.terms.of.service": "Must accept terms of service.",
      "caucasian": "Caucasian",
      "african.american": "African American",
      "asian": "Asian",
      "native.american": "Native American",
      "hispanic": "Hispanic",
      "homeless": "Homeless",
      "renting": "Renting",
      "homeowner": "Homeowner",
      "family": "Family",
      "single": "Single",
      "married": "Married",
      "separated": "Separated",
      "house": "House",
      "firstName": "First Name",
      "lastName": "Last Name",
      "email": "Email",
      "sobrietyDate": "Sobriety Date",
      "drugOfChoice": "Drug of Choice",
      "dailyHabit": "Daily Habit",
      "rentOwed": "Rent Owed",
      "choreFees": "Chore Fees",
      "emailAddress": "E-mail Address",
      "about.you": "About You",
      "enter.first.name": "First Name",
      "enter.last.name": "Last Name",
      "middle.initial": "Middle Initial",
      "middleInitial": "Middle Initial",
      "marital.status": "Marital Status",
      "housing.status": "Previous Housing Status",
      "ethnicity": "Ethnicity",
      "phoneNumber": "Phone Number",
      "dateOfBirth": "Date of Birth",
      "add.new.job": "Add Work",
      "male": "Male",
      "female": "Female",
      "gender": "Gender",
      "saving.guest": "Saving...",
      "change.sponsor.modal.title": "Change Sponsor",
      "new.sponsor.label": "Your new sponsor's name:",
      "save.guest.changes.question": "Would you like to save your changes?",
      "yes": "Yes",
      "no": "No",
      "money.saved": "Money Saved",
      "meetings.attended": "Meetings",
      "error.please.enter.house.code": "Please enter a house code.",
      "house.code.max.digits": "House code must be 10 digits.",
      "house.code.prompt": "Please Enter the Code of the House You are Joining.",
      "house.code.explanation": "This is a 10-digit code given to you by the house manager.",
      "verification.pending": "VERIFICATION PENDING",
      "inform.house.manager": "Please inform the house manager that you have completed the sign-up process.",
      "join": "Join",
      "create.new.account": "Create New Account",
      "reenter.code": "Re-Enter Code",
      "get.started": "Let's Get Started",
      "terms.of.service": "I agree to the Regroup Terms of Service.\nPlease also read the Privacy Policy.",
      "keep.updated": "Keep me updated about Regroup services, news, and promotions.",
      "next": "Next",
      "house.chat": "House Chat",
      "send": "Send",
      "password": "Password",
      "forgot.password": "Forgot Password",
      "please.enter.email": "Please enter your email address",
      "please.check.email": "Email sent",
      "error.invalid.email": "Email invalid",
      "error.user.not.found": "User not found",
      "verify.email": "Email verification has been disabled.",
      "signout": "Sign Out",
      "weekly": "Weekly",
      "house.overview.weekdays.description": "{{daysLeft}} days to go",
      "residents": "Residents",
      "disputes": "Disputes",
      "payments": "Payments",
      "inventory": "Inventory",
      "chores": "Chores",
      "missed.chores": "missed chores",
      "available": "available",
      "beds": "Beds",
      "house.setup.header": "House Setup",
      "house.setup.content": "House setup description goes here...",
      "manager.setup.header": "Manager Setup",
      "manager.setup.content": "This application assumes that there is a person in charge who oversees the house at some level.",
      "org.setup.header": "Organization Setup",
      "org.setup.content": "Setup your organization here. Any houses added will be added to this organization.",
      "operator.only.label": "I will be the sole manager of this home.",
      "senior.peer.label": "There will be a senior peer operating as the manager of this home.",
      "external.managers.label": "There will be one or more manager(s) overseeing the home, but they are not members of the home.",
      "add.manager": "Add another manager",
      "add.house": "Add another house",
      "chore.setup.header": "Chore Setup",
      "chore.setup.content": "Chore setup description goes here...",
      "guest.setup.header": "Guest Setup",
      "guest.setup.content": "Guest setup description goes here...",
      "add.guest": "Add Guest",
      "phase.config.header": "Phase Setup",
      "phase.config.content": "Phases are sets of rules and requirements for your guests. A multi-phase system positively reinforces resident compliance with your house rules and structure.",
      "common.phase.configs": "Common Configurations",
      "advanced.phase.configs": "Advanced Configuration",
      "basic.phase.config": "Basic",
      "add.phase": "Add another phase",
      "moderate.phase.config": "Intermediate",
      "advanced.phase.config": "Progressive",
      "custom.phase.config": "Custom",
      "custom.phase.config.description": "Fully customize your phase system",
      "basic.phase.config.description": "Same rules for all guests",
      "moderate.phase.config.description": "Contract System (On/Off Contract)",
      "advanced.phase.config.description": "Progressive System (3 phase system)",
      "more.information": "More information about house setup at",
      "phase.config.setup.header": "Phases",
      "phase.config.setup.content": "Phases provide a system that positively reinforces resident compliance with your house rules and structure."
    }
  }
}
