...
      );
    },
    [],
  );

  return (
    <View style={styles.newAccountForm} testID="new-account-screen">
      <RatsText
        style={{
          color: color.dark_grey,
          fontSize: fontSize.medium,
          marginVertical: normalize(10),
        }}
...
