...
          paddingBottom: normalize(20),
          ...container,
        },
      ]}>
      {!hideBack && (
        <RatsButton
          testID="setup-buttons-back"
          title={backLabel}
          containerStyle={{ width: '49%' }}
          onPress={onBackPress}
          light
        />
      )}
...
        <View
          style={{ width: hideBack ? '100%' : '49%', alignItems: 'center' }}>
          <ActivityIndicator color={color.main} />
        </View>
      ) : (
        <RatsButton
          testID="setup-buttons-next"
          title={nextLabel}
          containerStyle={{ width: hideBack ? '100%' : '49%' }}
          onPress={onNextPress}
          disabled={nextDisabled}
        />
      )}
...
