...
  };

  return (
    <SafeAreaView
      edges={["bottom"]}
      style={{ flex: 1, backgroundColor: color.white }}
      testID="org-setup-screen"
    >
      <View style={{ flex: 1, backgroundColor: color.light_grey }}>
        <ScreenHeader
          renderBackButton
          icon={<HelpIcon helpFn={renderHelp} />}
          header={"org.setup.header"}
...
                marginBottom: normalize(10),
              }}
              text="Set up the houses in your organization here. Any houses added will be added to this organization."
            />
            {renderHouses()}
            <RatsButton
              testID="add-house-button"
              onPress={addHouse}
              containerStyle={{ marginTop: normalize(15) }}
              light
              title="ADD HOUSE"
            />
          </View>
...
