...
      },
      addHouse: {
        icon: "plus",
        action: () => {
          if (isDemo(user?.email || "")) {
            return showPopover(
              "Add Home",
              "This functionality is disabled in demo mode."
            );
          }
          initInAppSetup();
          navigation.navigate(Routes.InAppOrgSetup);
        },
...
  if (loggingIn || loggingOut || loggingOutSuccessful || !user || !house) {
    return <RatsLoadingIndicator />;
  }

  return (
    <RatsScrollView
      testID="profile-screen"
      contentContainerStyle={{
        flexGrow: 1,
        backgroundColor: color.light_grey,
      }}
      behavior="height"
    >
...
