...
  const disputeNumber = countOpenDisputes(house);
  const issuesNumber = countOpenIssues(house);
  const beds = countBeds(house.rooms);

  return (
    <RatsScrollView
      testID="main-app-screen"
      contentContainerStyle={styles.container}>
      {/******************************* HEADER *******************************/}
      <ScreenHeader
        renderHouseButton
        clickableHouseButton={!!(user && user.isAdmin)}
        icon={
...
