...
    activityScreen.searchTerm,
  ]);

  return (
    <View
      style={{ flex: 1, backgroundColor: color.light_grey }}
      testID="activity-screen">
      <RenderModal
        modalVisible={activityScreen.modalVisible}
        modalType={activityScreen.modalType}
        selectedActivity={activityScreen.selectedActivity}
        guests={guests}
        getIconForActivity={activityScreen.getIconForActivity}
...
      />
      <RenderSearch
        searchTerm={activityScreen.searchTerm}
        setSearchTerm={activityScreen.setSearchTerm}
        onFilter={openFilters}
      />
      <View testID="activities-list" style={{ flex: 1 }}>
        <RenderActivities
          activities={filteredActivities}
          disputesOnly={false}
          guests={guests}
          admins={admins}
          disputes={disputes}
...
