...
            component={GuestHome}
            options={{ tabBarButtonTestID: 'guest-tab' }}
          />
          <MainTab.Screen
            name={Routes.Activities}
            component={ActivityScreen}
            options={{ tabBarButtonTestID: 'activities-tab' }}
          />
          <MainTab.Screen
            name={Routes.Contacts}
            component={ContactScreen}
            options={{ tabBarButtonTestID: 'contacts-tab' }}
          />
...
